fix for spacing in collab feature

--- a/css/ccap-statistics.css
+++ b/css/ccap-statistics.css
@@ -2125,12 +2125,6 @@ div.part > div.titlepage {
 .formula-review > .section > .title {
   display: none;
 }
-.simplelist {
-  margin-left: 1em;
-}
-.simplelist td {
-  padding: .5em 0 .25em;
-}
 /******************************************************
  * Generic Elements
  ******************************************************/
